--- a/public/dashboard_static/swagger/index.html
+++ b/public/dashboard_static/swagger/index.html
@@ -19,7 +19,7 @@
   <script type="text/javascript">
     $(function () {
       window.swaggerUi = new SwaggerUi({
-      url: window.parent.Settings.BasePath + "/api/api-docs.json",
+      url: window.parent.Settings.BasePath + "/api-doc",
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
